@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.seneye.internal;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -53,5 +52,5 @@ public class SeneyeBindingConstants {
     public static final String PARAMETER_PASSWORD = "password";
     public static final String PARAMETER_POLLTIME = "polltime";
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_SENEYE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_SENEYE);
 }
